# OptiMap

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  demo.cpp  plot_benchmarks.py  run_benchmarks.bat  run_benchmarks.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
benchmarks/: accidentally_quadratic_benchmark.cpp  array_sum_benchmark.cpp  hashmap_benchmark.cpp
include/: gxhash.hpp  hash.hpp  hashmap.hpp  wyhash.hpp
optimap/: main.cpp
tests/: copy.cpp  ctordtor.cpp  insert.cpp  iterate.cpp  sample_test.cpp  showhash.cpp  strings.cpp  test_at.cpp  test_contains.cpp  test_hashmap.cpp
